==> fengze-han/STM32-ASRPRO-Voice-Assistant/Firmware/stm32/HARDWARE/beep/beep.c <==
#include "stm32f10x.h"
#include "beep.h"
#include "sys.h" 
#include "delay.h"
//////////////////////////////////////////////////////////////////////////////////	 
//·äÃùÆ÷³õÊ¼»¯ 
//////////////////////////////////////////////////////////////////////////////////	
void BEEP_Init(void)
 {
  GPIO_InitTypeDef GPIO_InitStructure;  
  RCC_APB2PeriphClockCmd( RCC_APB2Periph_GPIOA, ENABLE);
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11; 
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz; 
  GPIO_Init(GPIOA, &GPIO_InitStructure);
  GPIO_ResetBits(GPIOA,GPIO_Pin_11); 
 }
 
void BEEP_ON(void)
{
	delay_ms(100);
	GPIO_SetBits(GPIOA,GPIO_Pin_11);
}

 
void BEEP_OFF(void)
{
	GPIO_ResetBits(GPIOA,GPIO_Pin_11);
}
